# generic_star_tracker

./: .gitignore  README.md
fsw/: CMakeLists.txt
fsw/cfs/: CMakeLists.txt
fsw/cfs/mission_inc/: generic_star_tracker_perfids.h
fsw/cfs/platform_inc/: generic_star_tracker_msgids.h  generic_star_tracker_platform_cfg.h
fsw/cfs/src/: generic_star_tracker_app.c  generic_star_tracker_app.h  generic_star_tracker_device.c  generic_star_tracker_device.h  generic_star_tracker_events.h  generic_star_tracker_msg.h  generic_star_tracker_version.h
fsw/cfs/unit-test/: CMakeLists.txt
fsw/cfs/unit-test/coveragetest/: coveragetest_generic_star_tracker_app.c  coveragetest_sample_app.c  coveragetest_star_tracker_app.c  coveragetest_star_tracker_device.c  generic_star_tracker_app_coveragetest_common.h  sample_app_coveragetest_common.h
fsw/cfs/unit-test/inc/: ut_generic_star_tracker_app.h
fsw/cfs/unit-test/stubs/: generic_star_tracker_device_stubs.c  sample_device_stubs.c
fsw/fprime/: library.cmake
fsw/fprime/mission_inc/: generic_star_tracker_perfids.h
fsw/fprime/platform_inc/: generic_star_tracker_msgids.h  generic_star_tracker_platform_cfg.h
fsw/fprime/src/: generic_star_tracker_app.c  generic_star_tracker_app.h  generic_star_tracker_device.h  generic_star_tracker_events.h  generic_star_tracker_msg.h  generic_star_tracker_version.h
fsw/fprime/st_src/: CMakeLists.txt  Generic_star_tracker.cpp  Generic_star_tracker.fpp  Generic_star_tracker.hpp
fsw/mission_inc/: generic_star_tracker_perfids.h
fsw/shared/: generic_star_tracker_device.c  generic_star_tracker_device.h
fsw/src/: generic_star_tracker_app.c  generic_star_tracker_device.c  generic_star_tracker_device.h
fsw/standalone/: CMakeLists.txt  device_cfg.h  generic_star_tracker_checkout.c  generic_star_tracker_checkout.h
fsw/unit-test/: CMakeLists.txt
fsw/unit-test/coveragetest/: coveragetest_generic_star_tracker_app.c
gsw/: GENERIC_STAR_TRACKER_SIM_CMD.txt
gsw/GENERIC_STAR_TRACKER/cmd_tlm/: GENERIC_STAR_TRACKER_CMD.txt  GENERIC_STAR_TRACKER_TLM.txt
gsw/GENERIC_STAR_TRACKER/lib/: generic_st_lib.rb
gsw/GENERIC_STAR_TRACKER/procedures/: generic_st_test.rb
gsw/GENERIC_STAR_TRACKER/procedures/tests/: generic_st_app_test.rb  generic_st_ast_test.rb  generic_st_cpt_test.rb  generic_st_device_test.rb  generic_st_lpt_test.rb
sim/cfg/: Inp_StarTracker_IPC.txt  SC_StarTracker_NOS3.txt  nos3-StarTracker-simulator.xml
sim/inc/: generic_star_tracker_42_data_provider.hpp  generic_star_tracker_data_point.hpp  generic_star_tracker_hardware_model.hpp
sim/src/: generic_star_tracker_42_data_provider.cpp  generic_star_tracker_data_point.cpp  generic_star_tracker_hardware_model.cpp
